Fix: make the flag icon also resize on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -521,6 +521,10 @@ body{
     }
 
     #navbar img{ height:42px;}
+    #navbarFlag{
+        height: 30px !important;
+        border: 3px solid;
+    }
 
     /* hover effects */
     .languageChoice:hover{
